--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "vite",
     "build": "vue-tsc && vite build && electron-builder",
     "preview": "vite preview",
+    "cli:build": "pnpm run -C cli build",
+    "cli:dev": "pnpm run -C cli dev",
+    "release": "pnpm run cli:build && pnpm -C cli release",
     "lint": "eslint .",
     "fix": "eslint . --fix"
   },
